--- a/index.html
+++ b/index.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architects</title>
+    <!-- Work Sans Google Font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Custom CSS file  -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-    
+    <header class="bg-color">
+        <nav>
+            <div class="container">
+                <div class="row">
+                    <div class="col-1">
+                        <div class="logo">
+                            <a href="#"><h2>G3 Architects</h2></a>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Login</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- Banner Section Start  -->
+        <section class="banner">
+            <div class="container banner-area">
+                <h1>Brand New <br> Group of Architects</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+    </header>
+    <!-- Website Main Part Start  -->
+    <main>
+
+    </main>
+    <!-- Website Footer Part Start  -->
+    <footer>
+
+    </footer>
 </body>
 </html>
