--- a/index.html
+++ b/index.html
@@ -45,11 +45,118 @@
     </header>
     <!-- Website Main Part Start  -->
     <main>
+        <!-- Team Section  -->
+        <section class="team">
+            <div class="container">
+                <div class="team-row">
+                    <div class="team-img">
+                            <img src="images/team1.png" alt="">
+                            <img src="images/team2.png" alt="">
+                            <img src="images/team3.png" alt="">
+                            <img src="images/team4.png" alt="">
+                    </div>
+                    <div class="team-content">
+                        <h2><span style="color: #727272;">Quick list</span> of Our <span style="color: #FF900E;">Features</span></h2>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        <button class="btn-primary">Explore More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- Feature Section Start  -->
+
+        <section class="feature">
+            <div class="container">
+                <div class="feature-row">
+                    <div class="feature-content">
+                        <h2>Features you will <br> love & enjoy</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        <div class="feature-content-box">
+                            <h3>Dexktop & Mobile Version</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-content-box">
+                            <h3>Drag & Drop Builder</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-content-box">
+                            <h3>Awesome Modern Design</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-content-box">
+                            <h3>Super Easy to Edit</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                    </div>
+                    <div class="feature-img">
+                        <img src="images/architect.png" alt="">
+                        <div class="experience-box">
+                            <h2>10 Years</h2>
+                            <p>Experience</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="fact">
+            <div class="container">
+                <div class="fact-top">
+                    <h2>Some Facts</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+                <div class="fact-row">
+                    <div class="fact-box">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2>54</h2>
+                        <p>Awards Winnings</p>
+                    </div>
+                    <div class="fact-box">
+                        <img src="images/icons/projects.png" alt="">
+                        <h2>1458</h2>
+                        <p>Project Finished</p>
+                    </div>
+                    <div class="fact-box">
+                        <img src="images/icons/customers.png" alt="">
+                        <h2>590</h2>
+                        <p>Clients Worked</p>
+                    </div>
+                    <div class="fact-box">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2>290</h2>
+                        <p>Complete Project</p>
+                    </div>
+                    <div class="fact-box">
+                        <img src="images/icons/email.png" alt="">
+                        <h2>22578</h2>
+                        <p>Email Send</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsor">
+            <div class="container">
+                <div class="sponsor-top">
+                    <h2>Our Sponspors</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+                <div class="sponsor-row">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Website Footer Part Start  -->
     <footer>
-
+        <div class="container footer">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 </html>
